Implement G1 uncompressed (de-)serialization

--- a/relic/Dockerfile
+++ b/relic/Dockerfile
@@ -9,7 +9,7 @@ ADD relic /relic
 RUN mkdir /relic-build
 # RUN cd /relic-build && sh /relic/preset/x64-pbc-128-b12.sh /relic
 # https://github.com/relic-toolkit/relic/issues/58
-RUN cd /relic-build && cmake -DFP_PRIME=381 -DVERBS=off /relic
+RUN cd /relic-build && cmake -DALLOC=DYNAMIC -DFP_PRIME=381 -DVERBS=off -DRAND=UDEV -DTESTS=1 -DBENCH=0 /relic
 RUN make -C /relic-build all doc
 
 EXPOSE 8080
